# dagster-weather-platform

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt/weather_dbt/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/weather_dbt/models/: groups.yml  sources.yml
dbt/weather_dbt/models/marts/: mart_weather_daily.sql  schema.yml
dbt/weather_dbt/models/staging/: schema.yml  stg_open_meteo_hourly.sql
docker/: Dockerfile.evidence  Dockerfile.platform  init_duckdb.py  start-dagster.sh  start-evidence.sh
docs/: linkedin_post_dagster_rex.md
evidence/: package.json
evidence/.evidence/customization/: .profile.json
evidence/pages/: index.md
evidence/sources/needful_things/: connection.yaml  weather_daily.sql  weather_forecast.sql
mlruns/1/models/m-ef31433ae8f7482c8766e466f5fffde4/artifacts/: MLmodel  (+2 more)
src/dagster_weather_intelligence_platform/: definitions.py  orchestration.py  utils.py
src/dagster_weather_intelligence_platform/assets/: weather_enriched.py
src/dagster_weather_intelligence_platform/assets/ml/: predict_next_7d.py  train_forecast_model.py
src/dagster_weather_intelligence_platform/checks/: __init__.py  ml_quality_checks.py  raw_weather_checks.py  weather_enriched_checks.py
src/dagster_weather_intelligence_platform/defs/transform/: defs.yaml
src/dagster_weather_intelligence_platform/defs/weather_duckdb_ingest/: defs.yaml  loads.py  partitioned_component.py
src/dagster_weather_intelligence_platform/resources/: __init__.py  gx.py  mlflow_resource.py
tests/: test_definitions.py  test_extract_json_array.py  test_gx_resource.py  test_utils.py  test_weather_enriched_asset.py  test_weather_ingest_utils.py
weather_intelligence_platform/: README.md  pyproject.toml
weather_intelligence_platform/.dg/: telemetry.yaml
weather_intelligence_platform/.telemetry/: id.yaml
weather_intelligence_platform/history/: runs.db
weather_intelligence_platform/history/runs/: index.db
weather_intelligence_platform/schedules/: schedules.db
