[project]
name = "dagster_weather_intelligence_platform"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.17",
    "dagster-dbt>=0.28.17",
    "dagster-dlt>=0.28.17",
    "dagster-mlflow>=0.28.17",
    "dbt-core>=1.11.6",
    "dbt-duckdb>=1.10.1",
    "dlt>=1.22.2",
    "duckdb>=1.4.4",
    "great-expectations>=1.13.0",
    "mlflow>=3.10.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_weather_intelligence_platform"
registry_modules = [
    "dagster_weather_intelligence_platform.components.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
